@@ -196,8 +196,10 @@ TableExportCsvDlg.excel.option.header.font=Header font
 ExcelFontInfo.font.default=Default
 
 TableExportCsvDlg.excel.SQL.in.extra.sheet=Create SQL statement sheet
-TableExportCsvDlg.excel.SQL.in.extra.sheet.infoButton=<html>For each SQL result a sheet containing the SQL statement is added to the MS Excel file.<br><br>\
-  Note: Applies to direct SQL to MS Excel file exports only but not to UI table exports.<br>\
-  For direct SQL exports, right mouse click an SQL statement or hit Ctrl+T --&gt; sql2file<br>\
+TableExportCsvDlg.excel.SQL.in.extra.sheet.infoButton=<html>Applies to MS Excel exports only. For each SQL result a sheet containing<br>\
+  the SQL statement is added to the MS Excel file.<br><br>\
+  On UI-Table exports: For UI-Table exports of SQL results be aware that the exported<br>\
+  data may be incomplete or changed as compared to the SQL result.<br><br>\
+  On direct SQL exports: To do direct SQL exports you may right mouse click an SQL statement or hit Ctrl+T --&gt; sql2file<br>\
   or check the multiple sheet export explained in the &quot;About Exporting&quot; link at the bottom of the export dialog.\
   </html>
